--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "expo": "^25.0.0",
     "native-base": "^2.4.1",
     "react": "16.2.0",
-    "react-native": "0.52.0"
+    "react-native": "0.52.0",
+    "react-native-router-flux": "^4.0.0-beta.31",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0"
   }
 }
