--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "expo": "^25.0.0",
+    "lodash": "^4.17.10",
     "native-base": "^2.4.1",
     "react": "16.2.0",
     "react-native": "0.52.0",
