Create MyLastPurchases component

--- a/app.json
+++ b/app.json
@@ -1,5 +1,15 @@
 {
   "expo": {
-    "sdkVersion": "25.0.0"
+  "name": "StampsCard",
+   "icon": "./resources/img/stamps_card_logo.png",
+   "version": "0.1.0",
+   "slug": "stamps-card",
+   "sdkVersion": "25.0.0",
+   "ios": {
+     "bundleIdentifier": "com.stampscard.app"
+   },
+   "android": {
+     "package": "com.stampscard.app"
+   }
   }
 }
