--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "native-base": "^2.4.1",
     "react": "16.2.0",
     "react-native": "0.52.0",
+    "react-native-qrcode": "^0.2.6",
     "react-native-router-flux": "^4.0.0-beta.31",
     "react-navigation": "^2.5.1",
     "react-redux": "^5.0.7",
