Fix linking with the QR code

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
           <category android:name="android.intent.category.DEFAULT"/>
           <category android:name="android.intent.category.BROWSABLE"/>
           <data android:scheme="stampscard"
-              android:host="customer/confirmPurchase"
+              android:host="customer"
               android:pathPrefix="/" />
         </intent-filter>
       </activity>
