--- a/package.json
+++ b/package.json
@@ -18,10 +18,16 @@
     "preset": "react-native"
   },
   "dependencies": {
+    "apollo-cache-inmemory": "^1.3.0-beta.6",
+    "apollo-client": "^2.3.7",
+    "apollo-link-http": "^1.5.4",
     "crossroads": "^0.12.2",
+    "graphql": "^0.13.2",
+    "graphql-tag": "^2.9.2",
     "lodash": "^4.17.10",
     "native-base": "^2.4.1",
     "react": "16.2.0",
+    "react-apollo": "^2.1.9",
     "react-native": "0.52.0",
     "react-native-camera": "^1.1.4",
     "react-native-qrcode": "^0.2.6",
