--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "react-apollo": "^2.1.9",
     "react-native": "0.52.0",
     "react-native-camera": "^1.1.4",
+    "react-native-collapsible": "^1.2.1",
+    "react-native-easy-grid": "^0.2.0",
     "react-native-qrcode": "^0.2.6",
     "react-native-qrcode-scanner": "^1.0.1",
     "react-native-router-flux": "^4.0.0-beta.31",
