--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "apollo-cache-inmemory": "^1.3.0-beta.6",
     "apollo-client": "^2.3.7",
+    "apollo-link-context": "^1.0.9",
     "apollo-link-http": "^1.5.4",
     "crossroads": "^0.12.2",
     "graphql": "^0.13.2",
