--- a/package.json
+++ b/package.json
@@ -37,9 +37,9 @@
     "test": "jest"
   },
   "dependencies": {
-    "apollo-cache-inmemory": "^1.3.0-beta.6",
-    "apollo-client": "^2.3.7",
-    "apollo-link-context": "^1.0.9",
+    "apollo-cache-inmemory": "^1.3.12",
+    "apollo-client": "^2.4.8",
+    "apollo-link-context": "^1.0.12",
     "apollo-link-http": "^1.5.4",
     "crossroads": "^0.12.2",
     "graphql": "^0.13.2",
