--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
     "lodash": "^4.17.10",
+    "moment": "^2.24.0",
     "native-base": "^2.4.1",
     "react": "16.2.0",
     "react-apollo": "^2.1.9",
